--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,10 @@ code {
   @apply mx-auto w-full max-w-[1800px] p-4 lg:px-8;
 }
 
+.secondary-btn {
+  @apply bg-transparent text-theme border border-theme hover:bg-neutral-50 cursor-pointer;
+}
+
 .hstack {
   @apply flex items-center;
 }
